Bug 409012 - "Firefox - trunk build Version 3.0b3pre is crashing on AIX [@ strlen.strlen ] nsMozIconURI::GetIconState" [p=shailen.n.jain@gmail.com (Shailen) r+sr+a1.9=roc]